# artemis

./: .env.example  Cargo.toml  README.md  compose.yml
migrations/: 20230519101912_init.sql  20230519105958_add_entries.sql
src/: main.rs
ui/: package-lock.json  package.json  tailwind.config.js
ui/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
ui/src/routes/feeds/[id]/: +page.svelte  +page.ts
