[package]
name = "artemis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = "0.6.18"
chrono = { version = "0.4.24", features = ["serde"] }
dotenvy = "0.15.7"
reqwest = "0.11.18"
rss = { version = "2.0.3", features = ["chrono", "serde", "url", "atom", "with-serde"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "postgres", "time", "chrono"] }
tokio = { version = "1.28.1", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
